<resources>
    <string name="app_name">Submission 2</string>
    <string name="app_name_2">My Movie Catalogue</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV Shows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Settings</string>
    <string name="detailmovie">Deskripsi</string>
    <string name="title_favorite">Favorite</string>

    <string name="notification" translatable="false">Reminder</string>
    <string name="upcoming_reminder">Upcoming Reminder</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="daily_reminder_notification">Daily Reminder Notification</string>
    <string name="turn_on_off_daily_reminder">Turn on/off daily reminder</string>
    <string name="upcoming_reminder_notification">Upcoming Reminder Notification</string>
    <string name="turn_on_off_upcoming_reminder">Turn on/off upcoming reminder</string>
    <string name="setting">Setting</string>
    <string name="setting_locale">Setting Locale</string>
    <string name="change_your_phone_localization">Change your phone localization</string>

    <string-array name="judul_movie">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>CREED II</item>
        <item>Deadpool 2</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
    </string-array>

    <string-array name="judul_tv">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>Gotham</item>
        <item>Grey Anatomy</item>
        <item>Hanna</item>
        <item>Marvel\'s Iron Fist</item>
        <item>Naruto Shippūden</item>
        <item>NCIS</item>
    </string-array>

    <array name="pict_movie">
        <item>@drawable/poster_a_start_is_born</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
    </array>

    <array name="pict_tv">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_grey_anatomy</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_iron_fist</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_ncis</item>
    </array>

    <string-array name="desc_movie">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy\'s life.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Many thousands of years in the future, Earth\’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
    </string-array>

    <string-array name="desc_tv">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>The Doom Patrol\’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the mystical Dragon Balls brought her to Goku\'s home. Together, they set off to find all seven and to grant her wish.</item>
        <item>Lucy is a 17-year-old girl, who wants to be a full-fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu isn\'t just any ordinary kid, he\'s a member of one of the world\'s most infamous mage guilds: Fairy Tail.</item>
        <item>Sick, twisted, politically incorrect and Freakin\' Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he\'s not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues</item>
        <item>Everyone knows the name Commissioner Gordon. He is one of the crime world\'s greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon\'s story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the world\'s most iconic villains? And what circumstances created them – the larger-than-life personas who would become Catwoman, The Penguin, The Riddler, Two-Face and The Joker?</item>
        <item>Follows the personal and professional lives of a group of doctors at Seattle\’s Grey Sloan Memorial Hospital.</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization; Akatsuki.</item>
        <item>From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position.</item>

    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
